--- a/sample.html
+++ b/sample.html
@@ -8,7 +8,7 @@
   <ul>
     <li>Apple</li>
     <li>Banana</li>
-    <li>Mango</li>
+    <li>Watermelon</li>
   </ul>
   <p>Learn more about fruits on <a href="https://en.wikipedia.org/wiki/Fruit" target="_blank">Wikipedia</a>.</p>
 </body>
