--- a/sample.html
+++ b/sample.html
@@ -7,7 +7,7 @@
   <h2>Fruits I Like</h2>
   <h3>fruits</h3>
   <ul>
-    <li>Apple</li>
+    <li>Banana</li>
     <li>Watermelon</li>
     <li>Mango</li>
   </ul>
